# ei-lang

./: .gitignore  Cargo.toml  README.md
docs/: grammar.md  idea.md  todo.md
docs/examples/: hello_fn.ei  hello_world.ei
src/ast/: Cargo.toml
src/ast/src/: lib.rs
src/cmd/: Cargo.toml
src/cmd/src/: main.rs
src/ei_cmd/: Cargo.toml
src/ei_cmd/src/: main.rs
src/ei_lexer/: Cargo.toml
src/ei_lexer/src/: lib.rs
src/ei_parser/: Cargo.toml
src/ei_parser/src/: lib.rs
src/interpreter/: Cargo.toml
src/interpreter/src/: lib.rs
src/lexer/: Cargo.toml
src/lexer/src/: lib.rs
src/parser/: Cargo.toml
src/parser/src/: lib.rs
src/test_utils/: Cargo.toml
src/test_utils/src/: lib.rs
src/test_utils/tests/: tests.rs
src/testgen/: Cargo.toml
src/testgen/src/: lib.rs
src/testgen/tests/: tests.rs
src/token/src/: lib.rs
